--- a/app/views/destinations/index.erb
+++ b/app/views/destinations/index.erb
@@ -1,11 +1,8 @@
-<h1>Where to? </h1>
-
-
-<form action="/destinations" method="post">
-	<label for="destination">Where to?</label><br>
-	<input type="text" name="destination"/>
-	<input type="submit" value="Let's Explore!"/>
-</form><br><br>
+<h1>Where to? => <%= @destination['results'][0]['formatted_address'] %></h1>
 
 
 <%= erb :'partials/_map', layout: false, locals: {lat: @latitude, lng: @longitude} %>
+
+
+<a href="/destinations/<%= @location.id %>/restaurants">Nearby Restaurants</a>
+<a href="/destinations/<%= @location.id %>/things-to-do">Things to do</a>
