--- a/app/views/partials/_map.erb
+++ b/app/views/partials/_map.erb
@@ -1,10 +1,11 @@
 <div id="map"></div>
 <script>
   function initMap() {
-    var uluru = {lat: <%= lat %>, lng: <%= lng %>};
+    var uluru = {lat: <%= @latitude %>, lng: <%= @longitude %>};
     var map = new google.maps.Map(document.getElementById('map'), {
       zoom: 4,
-      center: uluru
+      center: uluru,
+      disableDefaultUI: true
     });
     var marker = new google.maps.Marker({
       position: uluru,
