add header partial and things to do now displays all the attractions took off opening hours and it does not work

--- a/app/views/partials/_location_search.erb
+++ b/app/views/partials/_location_search.erb
@@ -1,9 +1,5 @@
-<%= erb :'partials/_header' %>
-
-<h1>Where to? </h1>
-
 <form action="/destinations" method="post">
 	<label for="destination">Where to?</label><br>
 	<input type="text" name="destination"/>
-	<input type="submit" value="Let's Explore!"/>
+	<input type="submit" value="✈ Let's Explore!"/>
 </form><br><br>
