--- a/app/views/restaurants/index.erb
+++ b/app/views/restaurants/index.erb
@@ -1,3 +1,5 @@
+<%= erb :'partials/_header' %>
+
 <h1>Nearby Restaurants: <%= @destination['results'][0]['formatted_address'] %></h1>
 
 <% @food['results'].length.times do |num| %>
