--- a/app/views/things-to-do/index.erb
+++ b/app/views/things-to-do/index.erb
@@ -1,14 +1,13 @@
+<%= erb :'partials/_header' %>
+
 <h1>THINGS-TO-DO: <%= @destination['results'][0]['formatted_address'] %></h1>
 
-<% if @things %>
-	<%= @things %>
 <% end %>
-
-<% @food['results'].length.times do |num| %>
-	<p>Restaurant name: <%= @food['results'][num]['name'] %></p>
-	<p>Price level: <%= @food['results'][num]['price_level'] %></p>
-	<p>Rating: <%= @food['results'][num]['rating'] %></p>
-	<% @food['results'][num]['types'].each do |type| %>
+<% @things.length.times do |num| %>
+	<p>Attraction name: <%= @things[num]['name'] %></p>
+	<% @things[num]['type'].each do |type| %>
 		<%= type %>
 	<% end %>
+	<p>Address: <%= @things[num]['formatted_address'] %></p>
+	<p>Rating: <%= @things[num]['rating'] %></p>
 <% end %>
