--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,3 +2,12 @@
 	height: 400px;
 	width: 100%;
 }
+
+#map_wrapper {
+    height: 400px;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 100%;
+}
