add a css nav bar and add a background image and add a google font called dosis

--- a/app/views/destinations/index.erb
+++ b/app/views/destinations/index.erb
@@ -1,6 +1,4 @@
-<%= erb :'partials/_header' %>
-
-<h1>Where to? => <%= @destination['results'][0]['formatted_address'] %></h1>
+<h1>where to? <%= @destination['results'][0]['formatted_address'] %></h1>
 
 
 <%= erb :'partials/_map', layout: false, locals: {lat: @latitude, lng: @longitude} %>
