--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,7 @@
-<%= erb :'partials/_header' %>
-
-<h1>Where to? </h1>
-
-<%= erb :'partials/_location_search' %>
+<div id="home-index">
+	<div id="home-image"></div>
+	<div id="home-text">
+		<h1>where to? </h1>
+		<%= erb :'partials/_location_search' %>
+	</div>
+</div>
