--- a/app/views/partials/_location_search.erb
+++ b/app/views/partials/_location_search.erb
@@ -1,5 +1,4 @@
 <form action="/destinations" method="post">
-	<label for="destination">Where to?</label><br>
-	<input type="text" name="destination"/>
-	<input type="submit" value="✈ Let's Explore!"/>
+	<input type="text" name="destination" class="field-long"/>
+	<input type="submit" value="✈ Let's Explore!" class="submit-button"/>
 </form><br><br>
