--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,10 +1,4 @@
-<% if logged_in? %>
-	<%= erb :'partials/_logout_form' %><br>
-	<h1>Where to?</h1><br><br>
-	<%= erb :'partials/_location_search' %>
-<% else %>
-	<a href="/sessions/login">Login</a><br>
-	<a href="/users/new">Register</a><br><br>
-	<h1>Where to?</h1>
-<% end %>
+<h1>where to?</h1><br><br>
+<%= erb :'partials/_location_search' %>
+
 
