--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/application.css">
@@ -12,6 +13,7 @@
   <title></title>
 </head>
 <body>
+	<%= erb :'partials/_header' %>
   <%= yield %>
 </body>
 <script async defer
