--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -1,14 +1,15 @@
 <div class="header">
-	<a href="/">Home</a>
-
-	<% if current_user %>
-		<a href="/users/<%= current_user.id %>"><%= current_user.username %></a>
-		<form action='/sessions' method="post">
-			<input type="hidden" name="_method" value="delete"/>
-			<input type="submit" value="Logout"/>
-		</form>
-	<% else %>
-		<a href="/users/new">Register</a>
-		<a href="/sessions/login">Login</a>
-	<% end %>
+	<ul>
+		<li><a href="/">home</a></li>
+			<% if current_user %>
+				<li><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></li>
+				<li><form action='/sessions' method="post">
+				<input type="hidden" name="_method" value="delete"/>
+				<input type="submit" value="Logout"/>
+				</form></li>
+			<% else %>
+				<li><a href="/users/new">create an account</a></li>
+				<li><a href="/sessions/login">login</a></li>
+			<% end %>
+	</ul>
 </div>
