--- a/app/views/destinations/index.erb
+++ b/app/views/destinations/index.erb
@@ -1,8 +1,8 @@
-<h1>where to? <%= @destination['results'][0]['formatted_address'] %></h1>
+<h1 id="destination-title">where to? <%= @destination['results'][0]['formatted_address'] %></h1>
 
 
 <%= erb :'partials/_map', layout: false, locals: {lat: @latitude, lng: @longitude} %>
 
 
-<a href="/destinations/<%= @location.id %>/restaurants">Nearby Restaurants</a>
-<a href="/destinations/<%= @location.id %>/things-to-do">Things to do</a>
+<a class="destination-text" href="/destinations/<%= @location.id %>/restaurants">Nearby Restaurants</a>
+<a class="destination-text" href="/destinations/<%= @location.id %>/things-to-do">Things to do</a>
