--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -5,7 +5,7 @@
 				<li><a href="/users/<%= current_user.id %>"><%= current_user.username %></a></li>
 				<li><form action='/sessions' method="post">
 				<input type="hidden" name="_method" value="delete"/>
-				<input type="submit" value="Logout"/>
+				<input id="logout-button" type="submit" value="logout" class="no-border no-outline no-bg"/>
 				</form></li>
 			<% else %>
 				<li><a href="/users/new">create an account</a></li>
