change img url to imgur link and add font to index header

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,9 @@
 <div id="home-index">
 	<div id="home-image"></div>
 	<div id="home-text">
-		<h1>where to? </h1>
-		<br>
-		<%= erb :'partials/_location_search' %>
+		<h1>where to?</h1>
+		<div id="home-search">
+			<%= erb :'partials/_location_search' %>
+		</div>
 	</div>
 </div>
