--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,12 @@
 <div class="user-home-page">
 	<h1>Hello <%= current_user.username %>!</h1>
+
+	<p>Saved countries:</p>
+	<ul>
+		<% current_user.destinations.each do |destination| %>
+			<li><a href="/destinations/<%= destination.id %>"><%= destination.name %></a></li>
+		<% end %>
+	</ul>
 </div>
+
+<!-- TRYING TO ADD DESTINATIONS TO USERS HOME PAGE -->
