--- a/app/views/partials/_location_search.erb
+++ b/app/views/partials/_location_search.erb
@@ -1,4 +1,4 @@
-<form class="location-search" action="/destinations" method="post">
+<form id="explore-form" class="location-search" action="/destinations" method="post">
 	<input type="text" name="destination" class="field-long" placeholder="ex: Paris, 633 Folsom"/>
 	<input type="submit" value="✈ Let's Explore!" class="submit-button"/>
 </form><br><br>
