add a back button and restaurant and or things to do on the restaurants and things to do page

--- a/app/views/restaurants/index.erb
+++ b/app/views/restaurants/index.erb
@@ -1,12 +1,18 @@
-<h1>Nearby Restaurants: <%= @destination['results'][0]['formatted_address'] %></h1>
+<div class="refer-container">
+	<a class="refer-buttons" href="/destinations/<%= @location.id %>">back</a>
+	<a class="refer-buttons" href="/destinations/<%= @location.id %>/things-to-do">things to do</a>	
+</div>
 
-<% @food['results'].length.times do |num| %>
-	<p>Restaurant name: <%= @food['results'][num]['name'] %></p>
-	<p>Price level: <%= @food['results'][num]['price_level'] %></p>
-	<p>Rating: <%= @food['results'][num]['rating'] %></p>
-	<% if current_user %>
-		<form action='/'>
-		</form>
+<div class="show-page">
+	<h1>Nearby Restaurants: <%= @destination['results'][0]['formatted_address'] %></h1>
+
+	<% @food['results'].length.times do |num| %>
+		<p>Restaurant name: <%= @food['results'][num]['name'] %></p>
+		<p>Price level: <%= @food['results'][num]['price_level'] %></p>
+		<p>Rating: <%= @food['results'][num]['rating'] %></p>
+		<% if current_user %>
+			<form action='/'>
+			</form>
+		<% end %>
 	<% end %>
-<% end %>
-
+</div>
