--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<div class="user-home-page">
+<div class="show-page">
 	<h1>Hello <%= current_user.username %>!</h1>
 
 	<%= erb :'partials/_location_search' %>
