add a condition that the user must be logged in to add a city as a favorite

--- a/app/views/destinations/index.erb
+++ b/app/views/destinations/index.erb
@@ -23,5 +23,10 @@
 			<input type="submit" value="remove favorite"/>
 		</form>
 	<% end %>
+
+	<% if !current_user %>
+		<p>You must be logged in to add city as a favorite</p>
+		<a href="/sessions/login">login</a>
+	<% end %>
 </div>
 
