--- a/public/css/application.css
+++ b/public/css/application.css
@@ -29,7 +29,7 @@ body {
 }
 
 #home-image {
-	background: url("http://i.imgur.com/CcXM7NM.jpg") no-repeat;
+	background: url("http://i.imgur.com/CcXM7NM.jpg");
 	background-size: cover;
 	width: 100vw;
 	height: 100vh;
